--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
@@ -1,7 +1,19 @@
-write_poem:
+reporting_route:
   description: >
-    Write a poem about how CrewAI is awesome.
-    Ensure the poem is engaging and adheres to the specified sentence count of {sentence_count}.
+    Generates a detailed report of the planned rover routes.
+    Includes all necessary information for executing the route, 
+    computing the optimal path whether for collecting samples or deploying sensors. 
+    Sends the report to the plan integrator agent.
   expected_output: >
-    A beautifully crafted poem about CrewAI, with exactly {sentence_count} sentences.
-  agent: poem_writer
+    A detailed report containing the optimal route for each rover.
+  agent: route_planner
+
+
+reporting_sampling:
+  description: >
+    Generates a detailed report of all samples to be collected, including the type of
+    sample, sensors used, collection procedure, and any relevant observations.
+    Sends the report to the plan integrator agent.
+  expected_output: >
+    A detailed report containing the sampling instructions for each rover.
+  agent: sample_collector
