--- a/mars_explorer/src/mars_explorer/crews/satellite_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/satellite_crew/config/tasks.yaml
@@ -1,17 +1,26 @@
-research_task:
+orbit_planning_task:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
+    Using all available mission data, compute the optimal orbital trajectories for
+    satellite coverage, communication windows, and data-relay efficiency.
+    Consider constraints such as line-of-sight visibility, energy usage, orbital
+    mechanics, ground station accessibility, and required imaging targets.
+    The orbit plan must be suitable for execution and clear enough for downstream
+    agents to use in satellite-level planning.
   expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+    A detailed orbital plan including:
+      - recommended orbital paths and maneuvers
+      - coverage analysis for required targets
+      - communication window predictions
+  agent: orbit_planner
 
-reporting_task:
+satellite_planning_task:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
+    Based on the orbital plan and mission data, compute the detailed operational
+    plan for each satellite. Include thermal scanning schedules, panoramic imaging
+    sequences, communication operations, and any required calibrations or safety
+    considerations.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+    A complete satellite mission plan including:
+      - task timelines for each satellite
+      - imaging and scanning operations
+  agent: satellite_planner
