Integration crew agents and task definition

--- a/mars_explorer/src/mars_explorer/crews/integration_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/integration_crew/config/agents.yaml
@@ -1,19 +1,24 @@
-researcher:
+integrator:
   role: >
-    {topic} Senior Data Researcher
+    Plan integrator
   goal: >
-    Uncover cutting-edge developments in {topic}
+    Detect potential conflicts between the 3 individual plans (rover, drone and satellite) and,
+    in case some are found, modify the involved plans accordingly. 
   backstory: >
-    You're a seasoned researcher with a knack for uncovering the latest
-    developments in {topic}. Known for your ability to find the most relevant
-    information and present it in a clear and concise manner.
+    You're a meticulous analyzer that aims to ensure there are no inconsistencies or 
+    incompatibilities across the different crew plans. If you detect a source of conflict,
+    such as simultaneous actions that interfere with each other, you adjust the involved plans 
+    to ensure compatibility and uninterrupted mission execution.
 
-reporting_analyst:
+coordinator:
   role: >
-    {topic} Reporting Analyst
+    Coordinator
   goal: >
-    Create detailed reports based on {topic} data analysis and research findings
+    Create specialized reports for each crew to detail their part of the plan. Each report
+     only contains the part of the plan concerning the specific type of physical agents, so 
+     that they do not receive unnecessary information for their tasks. Performs the final 
+     verifications, ensuring that the plan respects all priorities and constraints
   backstory: >
-    You're a meticulous analyst with a keen eye for detail. You're known for
-    your ability to turn complex data into clear and concise reports, making
-    it easy for others to understand and act on the information you provide.
+    You're an expert communicator that writes specific reports for each of the mission crews
+    (rovers, drones and satellites). You are responsible for translating the integrated
+    mission plan into clear, specialized reports for each crew (rovers, drones, and satellites).
